changed from .c to .cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,7 @@ if (HAVE_DRAND48)
 endif (HAVE_DRAND48)
 
 add_library(amcl_pf
-                    src/amcl/pf/pf.c
+                    src/amcl/pf/pf.cpp
                     src/amcl/pf/pf_kdtree.c
                     src/amcl/pf/pf_pdf.c
                     src/amcl/pf/pf_vector.c
